test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(x)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  identifier(x)
  ;
  }
